Revision 122 	 2011-08-20 	 changing reset_password to use digits only. Easy for students to notedown the new password 
Revision 121 	 2011-08-11 	 Never delete an account from Google Apps. Just rename it. 
Revision 120 	 2011-05-05 	 Enabling Django Compressor 
Revision 119 	 2011-05-04 	 Cleaning up fabfile 
Revision 118 	 2011-05-04 	 Setting EMAIL_BACKEND to locmem in test_settings 
Revision 117 	 2011-05-04 	 Updating fabfile to make nosetests pass 
Revision 116 	 2011-05-04 	 Fixing favicon url 
Revision 115 	 2011-05-04 	 Increasing uWSGI buffer size to 32768 to fix 'invalid request block size' error 
Revision 114 	 2011-05-04 	 Adding code to serve static files in dev 
Revision 113 	 2011-05-04 	 Fixing requirements file 
Revision 112 	 2011-05-04 	 Removing pysis_facgi.py 
Revision 111 	 2011-05-04 	 Major Rehaul : Using Nginx + uWSGI instead of Nginx + flup + FastCGI for deployment 
Revision 110 	 2011-05-04 	 Upgrading settings to Django 1.3 version. Primary diff : static and media 
Revision 109 	 2011-05-04 	 Renaming MEDIA_URL to STATIC_URL in templates as per Django 1.3 nomenclature 
Revision 108 	 2011-05-04 	 Adding manage.py 
Revision 107 	 2011-05-04 	 Renaming media to static as per Django 1.3 nomenclature 
Revision 106 	 2011-05-04 	 Updating requirements 
Revision 105 	 2011-03-04 	 Adding apache config 
Revision 104 	 2011-03-02 	 Adding email id to birthday reminders 
Revision 103 	 2011-03-02 	 Adding email id to birthday reminders 
Revision 102 	 2010-12-25 	 handling duplicate entries whil bulk loading 
Revision 101 	 2010-12-25 	 Fix for null last_name 
Revision 100 	 2010-12-25 	 Fix for null last_name 
Revision 99 	 2010-12-25 	 Removing link to Apps 
Revision 98 	 2010-12-25 	 migrating from IdeaScale to FormSpring 
Revision 97 	 2010-12-25 	 Config related changes 
Revision 96 	 2010-11-26 	 Name change 
Revision 95 	 2010-11-23 	 Fix for groupname of staff mebers 
Revision 94 	 2010-11-23 	 Fix for groupname of staff mebers 